--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
     - main
+    - KDP-1528
     tags:
     - '*'
   pull_request:
@@ -36,7 +37,7 @@ jobs:
           pre-commit run --all-files
 
 #      - name: Run tests
-#        run: python -m pytest --cov edr-pydantic-classes --cov-report xml --cov-report term-missing
+#        run: python -m pytest --cov edr-pydantic --cov-report xml --cov-report term-missing
 #
 #      - name: Upload Results
 #        if: ${{ matrix.python-version == env.LATEST_PY_VERSION }}
@@ -47,34 +48,34 @@ jobs:
 #          name: ${{ matrix.python-version }}
 #          fail_ci_if_error: false
 #
-#  publish:
-#    needs: [tests]
-#    runs-on: ubuntu-latest
-#    if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Set up Python
-#        uses: actions/setup-python@v4
-#        with:
-#          python-version: ${{ env.LATEST_PY_VERSION }}
-#
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          python -m pip install flit
-#          python -m pip install .
-#
-#      - name: Set tag version
-#        id: tag
-#        run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
-#
-#      - name: Set module version
-#        id: module
-#        run: echo "version=$(python -c 'from importlib.metadata import version; print(version("edr-pydantic-classes"))')" >> $GITHUB_OUTPUT
+  publish:
+    needs: [tests]
+    runs-on: ubuntu-latest
+    if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.LATEST_PY_VERSION }}
 
-#      - name: Build and publish
-#        if: steps.tag.outputs.tag == steps.module.outputs.version
-#        env:
-#          FLIT_USERNAME: ${{ secrets.PYPI_USERNAME }}
-#          FLIT_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-#        run: flit publish
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install flit
+          python -m pip install .
+
+      - name: Set tag version
+        id: tag
+        run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+
+      - name: Set module version
+        id: module
+        run: echo "version=$(python -c 'from importlib.metadata import version; print(version("edr-pydantic"))')" >> $GITHUB_OUTPUT
+
+      - name: Build and publish
+        if: steps.tag.outputs.tag == steps.module.outputs.version
+        env:
+          FLIT_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          FLIT_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: flit publish
