--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           pre-commit run --all-files
 
 #      - name: Run tests
-#        run: python -m pytest --cov edr-pydantic --cov-report xml --cov-report term-missing
+#        run: python -m pytest --cov edr_pydantic --cov-report xml --cov-report term-missing
 #
 #      - name: Upload Results
 #        if: ${{ matrix.python-version == env.LATEST_PY_VERSION }}
@@ -71,7 +71,7 @@ jobs:
 
       - name: Set module version
         id: module
-        run: echo "version=$(python -c 'from importlib.metadata import version; print(version("edr-pydantic"))')" >> $GITHUB_OUTPUT
+        run: echo "version=$(python -c 'from importlib.metadata import version; print(version("edr_pydantic"))')" >> $GITHUB_OUTPUT
 
       - name: Build and publish
         if: steps.tag.outputs.tag == steps.module.outputs.version
