--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 version = "0.1.0"
-dependencies = ["pydantic>=2.3,<3", "covjson-pydantic~=0.2.0"]
+dependencies = ["pydantic>=2.3,<3"]
 
 [project.optional-dependencies]
 test = ["pytest", "pytest-cov"]
