--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,18 +36,18 @@ jobs:
           python -m pip install pre-commit
           pre-commit run --all-files
 
-#      - name: Run tests
-#        run: python -m pytest --cov edr_pydantic --cov-report xml --cov-report term-missing
-#
-#      - name: Upload Results
-#        if: ${{ matrix.python-version == env.LATEST_PY_VERSION }}
-#        uses: codecov/codecov-action@v3
-#        with:
-#          file: ./coverage.xml
-#          flags: unittests
-#          name: ${{ matrix.python-version }}
-#          fail_ci_if_error: false
-#
+      - name: Run tests
+        run: python -m pytest --cov edr_pydantic --cov-report xml --cov-report term-missing
+
+      - name: Upload Results
+        if: ${{ matrix.python-version == env.LATEST_PY_VERSION }}
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          flags: unittests
+          name: ${{ matrix.python-version }}
+          fail_ci_if_error: false
+
   publish:
     needs: [tests]
     runs-on: ubuntu-latest
