--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "edr-pydantic"
-description = "Pydantic models for OGC Enviromental Data (EDR) API"
+description = "Pydantic models for OGC Environmental Data (EDR) API"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
