Add EDR Feature Collection to implement the optional properties specified in https://schemas.opengis.net/ogcapi/edr/1.1/openapi/schemas/edr-geojson/edrFeatureCollectionGeoJSON.yaml to help with discovery.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ classifiers = [
     "Topic :: Scientific/Engineering :: GIS",
     "Typing :: Typed",
 ]
-version = "0.2.1"
-dependencies = ["pydantic>=2.3,<3"]
+version = "0.2.2"
+dependencies = ["pydantic>=2.3,<3", "geojson-pydantic>1.0"]
 
 [project.optional-dependencies]
 test = ["pytest", "pytest-cov"]
