--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 version = "0.5.0"
-dependencies = ["pydantic>=2.3,<3"]
+dependencies = ["pydantic>=2.3,<3", "typing-extensions>=4.12.2"]
 
 [project.optional-dependencies]
 test = ["pytest", "pytest-cov"]
